# simple_docker_flask

./: Dockerfile  README.md  app.py  pyproject.toml  requirement.txt
